--- a/calculator/Calculator/src/App.css
+++ b/calculator/Calculator/src/App.css
@@ -9,7 +9,7 @@
   display: flex;
   /* flex-direction: column; */
   flex-wrap: wrap;
-  grid-gap: 5px;
+  grid-gap: 5px 10px;
   justify-content: center;
   margin: 5px 0 10px 0;
 }
